--- a/MediaMonks/Albums/Albums.storyboard
+++ b/MediaMonks/Albums/Albums.storyboard
@@ -75,32 +75,31 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FyW-Wf-Qyp">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="upo-Lq-mKF">
-                                    <size key="itemSize" width="128" height="128"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="upo-Lq-mKF">
+                                    <size key="itemSize" width="200" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotosCellID" id="Zmk-7a-Xcb" customClass="PhotosCell" customModule="MediaMonks" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="fxn-Wd-60a">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" semanticContentAttribute="forceLeftToRight" reuseIdentifier="PhotosCellID" id="Zmk-7a-Xcb" customClass="PhotosCell" customModule="MediaMonks" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1mn-EZ-qJL">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aka-wQ-ke7">
-                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="Aka-wQ-ke7" secondAttribute="trailing" id="IHC-4U-Akn"/>
-                                                <constraint firstItem="Aka-wQ-ke7" firstAttribute="leading" secondItem="fxn-Wd-60a" secondAttribute="leading" id="LEQ-Zi-can"/>
+                                                <constraint firstItem="Aka-wQ-ke7" firstAttribute="leading" secondItem="1mn-EZ-qJL" secondAttribute="leading" id="LEQ-Zi-can"/>
                                                 <constraint firstAttribute="bottom" secondItem="Aka-wQ-ke7" secondAttribute="bottom" id="TZL-zu-KK6"/>
-                                                <constraint firstItem="Aka-wQ-ke7" firstAttribute="top" secondItem="fxn-Wd-60a" secondAttribute="top" id="iWS-t9-CIR"/>
+                                                <constraint firstItem="Aka-wQ-ke7" firstAttribute="top" secondItem="1mn-EZ-qJL" secondAttribute="top" id="iWS-t9-CIR"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="150" height="150"/>
                                         <connections>
                                             <outlet property="PhotosImageView" destination="Aka-wQ-ke7" id="1dr-LN-GA6"/>
                                         </connections>
@@ -127,7 +126,49 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="leI-L3-1dJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2902" y="68"/>
+            <point key="canvasLocation" x="2839" y="72"/>
+        </scene>
+        <!--Details PhotosVC-->
+        <scene sceneID="whF-73-gDJ">
+            <objects>
+                <viewController storyboardIdentifier="DetailsPhotosVCID" id="k55-ag-Sfj" customClass="DetailsPhotosVC" customModule="MediaMonks" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="b8a-XW-h9R">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mEd-yb-zRn">
+                                <rect key="frame" x="10" y="98" width="394" height="394"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="mEd-yb-zRn" secondAttribute="height" multiplier="1:1" id="Zfb-3q-Ay3"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUY-mN-Wga">
+                                <rect key="frame" x="20" y="512" width="374" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hb1-AJ-rtV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QUY-mN-Wga" firstAttribute="leading" secondItem="hb1-AJ-rtV" secondAttribute="leading" constant="20" id="FbT-IT-mpX"/>
+                            <constraint firstItem="QUY-mN-Wga" firstAttribute="top" secondItem="mEd-yb-zRn" secondAttribute="bottom" constant="20" id="e0H-Qr-jT4"/>
+                            <constraint firstItem="hb1-AJ-rtV" firstAttribute="trailing" secondItem="mEd-yb-zRn" secondAttribute="trailing" constant="10" id="nhl-uD-iSk"/>
+                            <constraint firstItem="mEd-yb-zRn" firstAttribute="leading" secondItem="hb1-AJ-rtV" secondAttribute="leading" constant="10" id="oI8-dp-zKx"/>
+                            <constraint firstItem="hb1-AJ-rtV" firstAttribute="trailing" secondItem="QUY-mN-Wga" secondAttribute="trailing" constant="20" id="oe2-E6-jMw"/>
+                            <constraint firstItem="mEd-yb-zRn" firstAttribute="top" secondItem="hb1-AJ-rtV" secondAttribute="top" constant="10" id="xpE-Ig-AHX"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="vus-B0-vTh"/>
+                    <connections>
+                        <outlet property="photoImageView" destination="mEd-yb-zRn" id="stg-d6-2eN"/>
+                        <outlet property="photoTitle" destination="QUY-mN-Wga" id="suZ-iU-xqY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2to-zW-9xt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4757.971014492754" y="71.651785714285708"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XH4-AI-tOC">
@@ -146,6 +187,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrK-3M-0ay" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1031.8840579710145" y="71.651785714285708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hZ6-jW-bOW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UBr-vF-Yhz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jtd-UW-keo">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="k55-ag-Sfj" kind="relationship" relationship="rootViewController" id="32d-gK-RQe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ez0-Cs-AHX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3847.826086956522" y="71.651785714285708"/>
         </scene>
     </scenes>
     <resources>
